--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@ body{
 }
 
 /* BUSTA */
-.envelope{
-  background:#f4efe9;
-  border-radius:12px;
-  padding:40px 20px 60px;
-  text-align:center;
-  box-shadow:0 20px 50px rgba(0,0,0,0.25);
-  cursor:pointer;
+.envelope {
+  border-radius: 12px;
+  padding: 40px 20px 60px;
+  text-align: center;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.25);
+  cursor: pointer;
+
+  /* Sfondo immagine + gradiente */
+  background: 
+    linear-gradient(rgba(244, 239, 233, 0.6), rgba(244, 239, 233, 0.6)),
+    url('https://www.bilderwelten.it/img/635/635/resize-convert-jpg/_/r/_r_o_rosa_pfingstrosen_mit_blaettern_pft-x_aoa40_1x1.webp') no-repeat center/cover;
+
 }
 
 /* SIGILLO */
@@ -154,6 +159,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
