--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body{
 .seal{
   width:95px;
   height:95px;
-  background:#e3a6b4;
+  background:#ffb3c4;
   border-radius:50%;
   margin:25px auto 0;
   display:flex;
@@ -159,6 +159,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
