--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
   /* Sfondo immagine + gradiente */
   background: 
     linear-gradient(rgba(244, 239, 233, 0.6), rgba(244, 239, 233, 0.6)),
-    url('https://www.papyre.it/cdn/shop/products/rosaantico.jpg?v=1619897289') no-repeat center/cover;
+    url('https://www.mangela.it/182-large_default/bustina-bianca-6x10.jpg') no-repeat center/cover;
 
 }
 
@@ -159,6 +159,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
