--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body{
 }
 
 .wrapper{
-  width:150%;
+  width:200%;
   max-width:600px;
   position:relative;
 }
@@ -71,7 +71,7 @@ body{
   display:none;
   background:
     linear-gradient(rgba(255,255,255,0.88),rgba(255,255,255,0.88)),
-    url("https://www.bilderwelten.it/img/635/635/resize-convert-jpg/_/r/_r_o_rosa_pfingstrosen_mit_blaettern_pft-x_aoa40_1x1.webp");
+    url("https://i.etsystatic.com/5570408/r/il/db8273/1384983704/il_570xN.1384983704_ggnw.jpg");
   background-size:cover;
   border-radius:18px;
   padding:40px 25px;
@@ -159,6 +159,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
