--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@ body{
 .seal{
   width:95px;
   height:95px;
-  background:#ffb3c4;
   border-radius:50%;
   margin:25px auto 0;
+
   display:flex;
   justify-content:center;
   align-items:center;
+
+  /* IMMAGINE + LEGGERA GRADAZIONE */
+  background:
+    radial-gradient(circle, rgba(255,255,255,0.35), rgba(0,0,0,0.15)),
+    url('images/sigillorosso.png') no-repeat center/cover;
+
   font-size:42px;
   color:white;
+
   box-shadow:
     inset 0 0 10px rgba(255,255,255,0.6),
     0 10px 20px rgba(0,0,0,0.25);
 }
-
 .press{
   margin-top:12px;
   font-style:italic;
@@ -159,6 +165,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
