--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@ body{
   border-radius:50%;
   margin:25px auto 0;
 
-  background: url('images/sigillorosso.png') center/cover no-repeat;
+  background:
+  radial-gradient(circle, rgba(255,255,255,0.3), rgba(0,0,0,0.2)),
+  url('https://Alu94.github.io/battesimo-Denise/images/sigillorosso.png')
+  no-repeat center/cover;
+
 
   box-shadow:
     inset 0 0 10px rgba(255,255,255,0.6),
@@ -156,6 +160,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
