--- a/index.html
+++ b/index.html
@@ -43,17 +43,24 @@ body{
 
 }
 
+/* SIGILLO */
 .seal{
   width:95px;
   height:95px;
   border-radius:50%;
   margin:25px auto 0;
 
-  background:
-  radial-gradient(circle, rgba(255,255,255,0.3), rgba(0,0,0,0.2)),
-  url('https://Alu94.github.io/battesimo-Denise/images/sigillorosso.png')
-  no-repeat center/cover;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 
+  /* IMMAGINE + LEGGERA GRADAZIONE */
+  background:
+    radial-gradient(circle, rgba(255,255,255,0.35), rgba(0,0,0,0.15)),
+    url('images/sigillo.png') no-repeat center/cover;
+
+  font-size:42px;
+  color:white;
 
   box-shadow:
     inset 0 0 10px rgba(255,255,255,0.6),
@@ -160,6 +167,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
