--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@ body{
   width:95px;
   height:95px;
   border-radius:50%;
+
   margin:25px auto 0;
 
   background: url('images/sigillo.png') center/cover no-repeat;
 
-  box-shadow:
-    inset 0 0 8px rgba(255,255,255,0.25),
-    0 10px 20px rgba(0,0,0,0.25);
-  
+  box-shadow: 0 10px 20px rgba(0,0,0,0.25);
+ 
 }
   
 .press{
@@ -157,6 +156,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
