--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body{
 
   background: url('images/sigillo.png') center/cover no-repeat;
 
-  box-shadow: 0 10px 20px rgba(0,0,0,0.25);
+  box-shadow: none;
  
 }
   
@@ -156,6 +156,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
