--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body{
   border-radius: 12px;
   padding: 40px 20px 60px;
   text-align: center;
-  box-shadow: 0 20px 50px rgba(0,0,0,0.25);
+  box-shadow: none;
   cursor: pointer;
 
   /* Sfondo immagine + gradiente */
@@ -156,6 +156,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
