--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
   font-family:'Playfair Display',serif;
   background:
     linear-gradient(rgba(255,255,255,0.6),rgba(255,255,255,0.6)),
-    url("https://i.etsystatic.com/5570408/r/il/db8273/1384983704/il_570xN.1384983704_ggnw.jpg");
+    url('images/busta.png');
   background-size:cover;
   background-position:center;
   min-height:100vh;
@@ -156,6 +156,7 @@ document.getElementById("env").onclick=function(){
 
 </body>
 </html>
+
 
 
 
