--- a/index.html
+++ b/index.html
@@ -8,105 +8,101 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
 
 <style>
-body{
-  margin:0;
-  font-family:'Playfair Display',serif;
-  background:
-    linear-gradient(rgba(255,255,255,0.6),rgba(255,255,255,0.6)),
-    url('images/busta.png');
-  background-size:cover;
-  background-position:center;
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+/* BODY */
+body {
+  margin: 0;
+  font-family: 'Playfair Display', serif;
+  background: #f6efe9;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.wrapper{
-  width:200%;
-  max-width:600px;
-  position:relative;
+/* WRAPPER */
+.wrapper {
+  width: 100%;
+  max-width: 420px;
+  position: relative;
 }
 
 /* BUSTA */
-.envelope{
-  position:relative;
-}
+.envelope {
+  position: relative;
+  border-radius: 12px;
+  padding: 40px 20px 60px;
+  text-align: center;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.25);
+  cursor: pointer;
 
-  /* Sfondo immagine + gradiente */
-  background: 
-    linear-gradient(rgba(244, 239, 233, 0.6), rgba(244, 239, 233, 0.6)),
+  background:
+    linear-gradient(rgba(244,239,233,0.6), rgba(244,239,233,0.6)),
     url('https://www.mangela.it/182-large_default/bustina-bianca-6x10.jpg') no-repeat center/cover;
-
 }
 
 /* SIGILLO */
-.seal{
-  width:95px;
-  height:95px;
-  border-radius:50%;
+.seal {
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  margin: 25px auto 0;
 
-  position:absolute;
-  left:50%;
-  bottom:30px;
-  transform:translateX(-50%);
-
-  background:url('images/sigillo.png') center/cover no-repeat;
-
+  background: url('images/sigillo.png') center/cover no-repeat;
   box-shadow: none;
- 
 }
-  
-.press{
-  margin-top:12px;
-  font-style:italic;
-  color:#9b6b77;
+
+/* TESTO SOTTO SIGILLO */
+.press {
+  margin-top: 12px;
+  font-style: italic;
+  color: #9b6b77;
 }
 
 /* INVITO */
-.card{
-  display:none;
+.card {
+  display: none;
   background:
-    linear-gradient(rgba(255,255,255,0.88),rgba(255,255,255,0.88)),
+    linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.88)),
     url("https://i.etsystatic.com/5570408/r/il/db8273/1384983704/il_570xN.1384983704_ggnw.jpg");
-  background-size:cover;
-  border-radius:18px;
-  padding:40px 25px;
-  text-align:center;
-  box-shadow:0 25px 60px rgba(0,0,0,0.35);
+  background-size: cover;
+  border-radius: 18px;
+  padding: 40px 25px;
+  text-align: center;
+  box-shadow: 0 25px 60px rgba(0,0,0,0.35);
 }
 
-.card h2{
-  font-size:20px;
-  color:#9b6b77;
+.card h2 {
+  font-size: 20px;
+  color: #9b6b77;
 }
 
-.card h1{
-  font-family:'Great Vibes',cursive;
-  font-size:50px;
-  color:#c98798;
-  margin:10px 0 20px;
+.card h1 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 50px;
+  color: #c98798;
+  margin: 10px 0 20px;
 }
 
-.card p{
-  color:#6b555b;
-  font-size:16px;
-  line-height:1.7;
-  margin:12px 0;
+.card p {
+  color: #6b555b;
+  font-size: 16px;
+  line-height: 1.7;
+  margin: 12px 0;
 }
 
-.strong{
-  font-weight:500;
-  color:#8a5a66;
+.strong {
+  font-weight: 500;
+  color: #8a5a66;
 }
 
-.fade{
-  animation:open 1.2s ease forwards;
+/* ANIMAZIONE INVITO */
+.fade {
+  animation: open 1.2s ease forwards;
 }
 
-@keyframes open{
-  from{opacity:0; transform:scale(0.95);}
-  to{opacity:1; transform:scale(1);}
+@keyframes open {
+  from {opacity: 0; transform: scale(0.95);}
+  to {opacity: 1; transform: scale(1);}
 }
 </style>
 </head>
@@ -146,47 +142,13 @@ body{
 </div>
 
 <script>
-document.getElementById("env").onclick=function(){
-  this.style.display="none";
-  let c=document.getElementById("card");
-  c.style.display="block";
+document.getElementById("env").onclick = function() {
+  this.style.display = "none";
+  let c = document.getElementById("card");
+  c.style.display = "block";
   c.classList.add("fade");
 }
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
