--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 
   background:
     linear-gradient(rgba(244,239,233,0.6), rgba(244,239,233,0.6)),
-    url('https://www.mangela.it/182-large_default/bustina-bianca-6x10.jpg') no-repeat center/cover;
+    url('images/busta.png') no-repeat center/cover;
 }
 
 /* SIGILLO */
@@ -45,7 +45,7 @@ body {
   width: 95px;
   height: 95px;
   border-radius: 50%;
-  margin: 25px auto 0;
+  margin: 120px auto 0;
 
   background: url('images/sigillo.png') center/cover no-repeat;
   box-shadow: none;
@@ -152,3 +152,4 @@ document.getElementById("env").onclick = function() {
 
 </body>
 </html>
+
