--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ body {
   margin: 0;
   font-family: 'Playfair Display', serif;
   background: #f6efe9;
-  min-height: 100vh;
+  height: 100vh;      /* altezza viewport */
+  overflow: hidden;   /* blocca scroll */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -152,5 +153,6 @@ document.getElementById("env").onclick = function() {
 
 </body>
 </html>
+
 
 
