--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@ body {
 /* WRAPPER */
 .wrapper {
   width: 100%;
-  max-width: 420px;
-  position: relative;
+  max-width: 300px; /* busta proporzionata */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* BUSTA */
@@ -153,6 +156,7 @@ document.getElementById("env").onclick = function() {
 
 </body>
 </html>
+
 
 
 
