--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<script>
-document.getElementById("env").onclick = function() {
-  this.style.display = "none";
-  let c = document.getElementById("card");
-  c.style.display = "block";
-  c.classList.add("fade");
-}
-</script>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Battesimo Denise Lila</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
+
+<style>
 /* BODY */
 body {
   margin: 0;
@@ -16,14 +17,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: auto; /* permette pull-to-refresh sui cellulari */
-  padding: 10px;    /* spazio intorno alla busta */
+  overflow-y: auto;
+  padding: 10px;
 }
 
 /* WRAPPER */
 .wrapper {
   width: 100%;
-  max-width: 400px;   /* massima larghezza busta */
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,16 +34,16 @@ body {
 /* BUSTA */
 .envelope {
   position: relative;
-  width: 100%;        /* occupa tutta la larghezza del wrapper */
+  width: 100%;
   height: auto;
-  aspect-ratio: 10/6; /* rapporto reale 10:6 della busta */
+  aspect-ratio: 10/6;
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0,0,0,0.25);
   cursor: pointer;
 
   background:
     linear-gradient(rgba(244,239,233,0.6), rgba(244,239,233,0.6)),
-    url('images/busta.png') no-repeat center/cover; /* sostituisci con la tua immagine */
+    url('images/busta.png') no-repeat center/cover;
   background-size: cover;
 }
 
@@ -51,12 +52,10 @@ body {
   width: 95px;
   height: 95px;
   border-radius: 50%;
-
   position: absolute;
   left: 50%;
-  bottom: 15px; /* distanza dal bordo inferiore della busta */
+  bottom: 15px;
   transform: translateX(-50%);
-
   background: url('images/sigillo.png') center/cover no-repeat;
   box-shadow: none;
 }
@@ -115,15 +114,19 @@ body {
   to {opacity: 1; transform: scale(1);}
 }
 
-/* MEDIA QUERY PER TELEFONI PICCOLI */
+/* MEDIA QUERY */
 @media (max-width: 360px) {
   .wrapper {
-    max-width: 90%; /* lascia un po’ di spazio ai lati */
+    max-width: 90%;
   }
   .card h1 {
     font-size: 42px;
   }
 }
+</style>
+</head>
+
+<body>
 
 <div class="wrapper">
   <div class="envelope" id="env">
@@ -150,3 +153,15 @@ body {
     </p>
   </div>
 </div>
+
+<script>
+document.getElementById("env").onclick = function() {
+  this.style.display = "none";
+  let c = document.getElementById("card");
+  c.style.display = "block";
+  c.classList.add("fade");
+}
+</script>
+
+</body>
+</html>
