--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
   border-radius: 50%;
   position: absolute;
   left: 50%;
-  bottom: 15px;
+  bottom: 50px; /* distanza dal bordo inferiore della busta */
   transform: translateX(-50%);
   background: url('images/sigillo.png') center/cover no-repeat;
   box-shadow: none;
@@ -62,9 +62,13 @@ body {
 
 /* TESTO SOTTO SIGILLO */
 .press {
-  margin-top: 12px;
+  position: absolute;
+  left: 50%;
+  bottom: 15px;      /* distanza dal bordo inferiore della busta */
+  transform: translateX(-50%);
   font-style: italic;
   color: #9b6b77;
+  text-align: center;
 }
 
 /* INVITO */
@@ -165,3 +169,4 @@ document.getElementById("env").onclick = function() {
 
 </body>
 </html>
+
