--- a/index.html
+++ b/index.html
@@ -10,15 +10,8 @@
 <style>
 /* BODY */
 body {
-  margin: 0;
-  font-family: 'Playfair Display', serif;
-  background: #f6efe9;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow-y: auto;
-  padding: 10px;
+  background: url('images/sfondo.jpg') no-repeat center center;
+  background-size: cover;
 }
 
 /* WRAPPER */
@@ -179,6 +172,7 @@ document.getElementById("env").onclick = function() {
 
 </body>
 </html>
+
 
 
 
