--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@ body {
   margin: 0;
   font-family: 'Playfair Display', serif;
 
-  /* Sfondo full screen */
   background: url('images/sfondo.jpg') no-repeat center center fixed;
   background-size: cover;
 
-  /* Centro verticale e orizzontale della busta */
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
 
-  overflow: hidden; /* evita scroll */
-
+  overflow: hidden;
 }
 
 /* WRAPPER */
@@ -32,59 +29,25 @@ body {
   width: 100%;
   max-width: 400px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-/* BUSTA */
-.envelope {
-  position: relative;
+/* VIDEO BUSTA */
+.video-wrapper {
   width: 100%;
-  height: auto;
   aspect-ratio: 10/6;
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0,0,0,0.25);
+  overflow: hidden;
   cursor: pointer;
-
-  background:
-    linear-gradient(rgba(244,239,233,0.6), rgba(244,239,233,0.6)),
-    url('images/busta.png') no-repeat center/cover;
-  background-size: cover;
 }
 
-/* SIGILLO */
-.seal {
-  width: 95px;
-  height: 95px;
-  border-radius: 50%;
-  position: absolute;
-  left: 50%;
-  bottom: 10px; /* distanza dal bordo inferiore della busta */
-  transform: translateX(-50%);
-  background: url('images/sigillo.png') center/cover no-repeat;
-  box-shadow: none;
-}
-
-/* TESTO SOTTO SIGILLO */
-.press {
-  position: absolute;
-  left: 50%;
-  bottom: -55px;      /* distanza dal bordo inferiore della busta */
-  transform: translateX(-50%);
-  font-style: italic;
-  color: #9b6b77;
-  text-align: center;
-  
-  /* Animazione */
-  animation: pulse 1.2s ease-in-out infinite;
-}
-
-/* Animazione pulsante */
-@keyframes pulse {
-  0% { transform: translateX(-50%) translateY(0); opacity: 1; }
-  50% { transform: translateX(-50%) translateY(-8px); opacity: 0.8; }
-  100% { transform: translateX(-50%) translateY(0); opacity: 1; }
+.video-wrapper video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 /* INVITO */
@@ -130,11 +93,11 @@ body {
 }
 
 @keyframes open {
-  from {opacity: 0; transform: scale(0.95);}
-  to {opacity: 1; transform: scale(1);}
+  from { opacity: 0; transform: scale(0.95); }
+  to { opacity: 1; transform: scale(1); }
 }
 
-/* MEDIA QUERY */
+/* MOBILE */
 @media (max-width: 360px) {
   .wrapper {
     max-width: 90%;
@@ -149,11 +112,15 @@ body {
 <body>
 
 <div class="wrapper">
-  <div class="envelope" id="env">
-    <div class="seal"></div>
-    <div class="press">Premi il sigillo</div>
+
+  <!-- VIDEO -->
+  <div class="video-wrapper" id="videoWrapper">
+    <video id="bustaVideo" playsinline preload="auto">
+      <source src="images/apertura-busta.mp4" type="video/mp4">
+    </video>
   </div>
 
+  <!-- INVITO -->
   <div class="card" id="card">
     <h2>Siete invitati al Battesimo della piccola</h2>
     <h1>Denise Lila</h1>
@@ -172,15 +139,24 @@ body {
       entro il <strong>01.03.2026</strong>
     </p>
   </div>
+
 </div>
 
 <script>
-document.getElementById("env").onclick = function() {
-  this.style.display = "none";
-  let c = document.getElementById("card");
-  c.style.display = "block";
-  c.classList.add("fade");
-}
+const video = document.getElementById("bustaVideo");
+const wrapper = document.getElementById("videoWrapper");
+const card = document.getElementById("card");
+
+wrapper.addEventListener("click", () => {
+  video.play();
+  wrapper.style.cursor = "default";
+});
+
+video.addEventListener("ended", () => {
+  wrapper.style.display = "none";
+  card.style.display = "block";
+  card.classList.add("fade");
+});
 </script>
 
 </body>
