--- a/index.html
+++ b/index.html
@@ -29,25 +29,57 @@ body {
   width: 100%;
   max-width: 400px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
-/* VIDEO BUSTA */
-.video-wrapper {
+/* BUSTA */
+.envelope {
+  position: relative;
   width: 100%;
-  aspect-ratio: 10/6;
+  aspect-ratio: 10 / 6;
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0,0,0,0.25);
-  overflow: hidden;
+  cursor: default;
+
+  background:
+    linear-gradient(rgba(244,239,233,0.6), rgba(244,239,233,0.6)),
+    url('images/busta.png') no-repeat center / cover;
+}
+
+/* SIGILLO */
+.seal {
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+
+  background: url('images/sigillo.png') no-repeat center / cover;
   cursor: pointer;
 }
 
-.video-wrapper video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
+/* TESTO SOTTO SIGILLO */
+.press {
+  position: absolute;
+  left: 50%;
+  bottom: -55px;
+  transform: translateX(-50%);
+  font-style: italic;
+  color: #9b6b77;
+  text-align: center;
+
+  animation: pulse 1.2s ease-in-out infinite;
+}
+
+/* Animazione testo */
+@keyframes pulse {
+  0% { transform: translateX(-50%) translateY(0); opacity: 1; }
+  50% { transform: translateX(-50%) translateY(-8px); opacity: 0.8; }
+  100% { transform: translateX(-50%) translateY(0); opacity: 1; }
 }
 
 /* INVITO */
@@ -57,12 +89,14 @@ body {
     linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.88)),
     url("https://i.etsystatic.com/5570408/r/il/db8273/1384983704/il_570xN.1384983704_ggnw.jpg");
   background-size: cover;
+
   border-radius: 18px;
   padding: 40px 25px;
   text-align: center;
   box-shadow: 0 25px 60px rgba(0,0,0,0.35);
 }
 
+/* TESTI INVITO */
 .card h2 {
   font-size: 20px;
   color: #9b6b77;
@@ -94,7 +128,7 @@ body {
 
 @keyframes open {
   from { opacity: 0; transform: scale(0.95); }
-  to { opacity: 1; transform: scale(1); }
+  to   { opacity: 1; transform: scale(1); }
 }
 
 /* MOBILE */
@@ -113,11 +147,10 @@ body {
 
 <div class="wrapper">
 
-  <!-- VIDEO -->
-  <div class="video-wrapper" id="videoWrapper">
-    <video id="bustaVideo" playsinline preload="auto">
-      <source src="images/apertura-busta.mp4" type="video/mp4">
-    </video>
+  <!-- BUSTA -->
+  <div class="envelope" id="env">
+    <div class="seal" id="seal"></div>
+    <div class="press">Premi il sigillo</div>
   </div>
 
   <!-- INVITO -->
@@ -143,20 +176,12 @@ body {
 </div>
 
 <script>
-const video = document.getElementById("bustaVideo");
-const wrapper = document.getElementById("videoWrapper");
-const card = document.getElementById("card");
-
-wrapper.addEventListener("click", () => {
-  video.play();
-  wrapper.style.cursor = "default";
-});
-
-video.addEventListener("ended", () => {
-  wrapper.style.display = "none";
+document.getElementById("seal").onclick = function () {
+  document.getElementById("env").style.display = "none";
+  const card = document.getElementById("card");
   card.style.display = "block";
   card.classList.add("fade");
-});
+};
 </script>
 
 </body>
