--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   height: 100%;
   background: url('images/sfondo.jpg') no-repeat center center;
   background-size: cover;
-  z-index: -1; /* dietro a tutto */
+  z-index: -1;
 }
 
 /* BODY */
@@ -30,7 +30,7 @@ body {
   min-height: 100vh;
 
   overflow-y: auto; /* permette pull-to-refresh */
-  padding: 20px;    /* spazio ai lati */
+  padding: 20px;
   box-sizing: border-box;
 }
 
@@ -94,11 +94,7 @@ body {
 /* INVITO */
 .card {
   display: none;
-  background:
-    linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.88)),
-    url("https://i.etsystatic.com/5570408/r/il/db8273/1384983704/il_570xN.1384983704_ggnw.jpg");
-  background-size: cover;
-
+  background: linear-gradient(rgba(255,255,255,0.95), rgba(255,255,255,0.95));
   border-radius: 18px;
   padding: 40px 25px;
   text-align: center;
