--- a/index.html
+++ b/index.html
@@ -94,11 +94,15 @@ body {
 /* INVITO */
 .card {
   display: none;
-  background: linear-gradient(rgba(255,255,255,0.95), rgba(255,255,255,0.95));
+  background: linear-gradient(
+    rgba(0,0,0,0.5) 0%,   /* nero semi-trasparente in alto */
+    rgba(0,0,0,0.9) 100%  /* nero quasi pieno in basso */
+  );
   border-radius: 18px;
   padding: 40px 25px;
   text-align: center;
   box-shadow: 0 25px 60px rgba(0,0,0,0.35);
+  color: #ffffff; /* testo bianco per contrasto */
 }
 
 .card h2 { font-size: 20px; color: #9b6b77; }
@@ -164,3 +168,4 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
