--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ body {
 .card {
   display: none;
   background: linear-gradient(
-    rgba(0,0,0,0.5) 0%,   /* nero semi-trasparente in alto */
-    rgba(0,0,0,0.9) 100%  /* nero quasi pieno in basso */
+    rgba(0,0,0,0.5) 100%,   /* nero semi-trasparente in alto */
+    rgba(0,0,0,0.5) 100%  /* nero quasi pieno in basso */
   );
   border-radius: 18px;
   padding: 40px 25px;
@@ -105,9 +105,9 @@ body {
   color: #ffffff; /* testo bianco per contrasto */
 }
 
-.card h2 { font-size: 20px; color: #9b6b77; }
-.card h1 { font-family: 'Great Vibes', cursive; font-size: 50px; color: #c98798; margin: 10px 0 20px; }
-.card p { color: #6b555b; font-size: 16px; line-height: 1.7; margin: 12px 0; }
+.card h2 { font-size: 20px; color: #f7f5f6; }
+.card h1 { font-family: 'Great Vibes', cursive; font-size: 50px; color: #f7f5f6; margin: 10px 0 20px; }
+.card p { color: #f7f5f6; font-size: 16px; line-height: 1.7; margin: 12px 0; }
 .strong { font-weight: 500; color: #8a5a66; }
 
 /* ANIMAZIONE INVITO */
@@ -168,4 +168,5 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
