--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@ body {
 .card {
   display: none;
   background: linear-gradient(
-    rgba(0,0,0,0.5) 100%,   /* nero semi-trasparente in alto */
-    rgba(0,0,0,0.5) 100%  /* nero quasi pieno in basso */
+    rgba(255,255,255,0.95) 100%,   /* nero semi-trasparente in alto */
+    rgba(255,255,255,0.95) 100%  /* nero quasi pieno in basso */
   );
   border-radius: 18px;
   padding: 40px 25px;
   text-align: center;
   box-shadow: 0 25px 60px rgba(0,0,0,0.35);
-  color: #ffffff; /* testo bianco per contrasto */
+  color: #000000; /* testo nero per contrasto */
 }
 
 .card h2 { font-size: 20px; color: #f7f5f6; }
@@ -168,5 +168,6 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
