--- a/index.html
+++ b/index.html
@@ -137,20 +137,20 @@ body {
 
   <!-- INVITO -->
   <div class="card" id="card">
-    <h2>Siete invitati al Battesimo della piccola</h2>
-    <h1>Denise Lila</h1>
-    <p class="strong">12.04.2026</p>
+    <h2>Siamo felici di invitarvi al</h2>
+    <h1>Battesimo di Denise Lila</h1>
+    <p class="strong">il 12.04.2026</p>
     <p>
       presso la <strong>Chiesa Maria Assunta di Villa Lagarina</strong><br>
-      ore <strong>11:30</strong>
+      alle ore <strong>11:30</strong>
     </p>
     <p>
       La cerimonia proseguirà<br>
       con un rinfresco presso<br>
-      <strong>il Parco Guerrieri Gonzaga<br>di Villa Lagarina</strong>
+      <strong>il Parco Guerrieri Gonzaga</strong>
     </p>
     <p style="margin-top:25px;font-style:italic;">
-      È gradita la conferma di partecipazione<br>
+      Chiediamo gentilmente conferma di partecipazione<br>
       entro il <strong>01.03.2026</strong>
     </p>
   </div>
@@ -168,6 +168,7 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
 
