--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@ body {
   color: #000000; /* testo nero per contrasto */
 }
 
-.card h2 { font-size: 20px; color: #f08bec; }
-.card h1 { font-family: 'Great Vibes', cursive; font-size: 50px; color: #f08bec; margin: 10px 0 20px; }
-.card p { color: #f08bec; font-size: 16px; line-height: 1.7; margin: 12px 0; }
-.strong { font-weight: 500; color: #f08bec; }
+.card h2 { font-size: 20px; color: #ffffff; }
+.card h1 { font-family: 'Great Vibes', cursive; font-size: 50px; color: #ffffff; margin: 10px 0 20px; }
+.card p { color: #ffffff; font-size: 16px; line-height: 1.7; margin: 12px 0; }
+.strong { font-weight: 500; color: #ffffff; }
 
 /* ANIMAZIONE INVITO */
 .fade { animation: open 1.2s ease forwards; }
@@ -168,6 +168,7 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
 
