--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('images/sfondo.jpg') no-repeat center center;
+  background: url('images/sfondo.jpg') no-repeat center center fixed;
   background-size: cover;
   z-index: -1;
 }
@@ -28,7 +28,6 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-
   overflow-y: auto; /* permette pull-to-refresh */
   padding: 20px;
   box-sizing: border-box;
@@ -51,7 +50,6 @@ body {
   border-radius: 12px;
   box-shadow: 0 20px 50px rgba(0,0,0,0.25);
   cursor: default;
-
   background:
     linear-gradient(rgba(244,239,233,0.6), rgba(244,239,233,0.6)),
     url('images/busta.png') no-repeat center / cover;
@@ -81,7 +79,6 @@ body {
   color: #ffffff;
   font-size: 18px;
   text-align: center;
-
   animation: pulse 1.2s ease-in-out infinite;
 }
 
@@ -95,14 +92,15 @@ body {
 .card {
   display: none;
   background: linear-gradient(
-    rgba(150,150,150,0.30) 50%,   /* nero semi-trasparente in alto */
-    rgba(150,150,150,0.30) 50%  /* nero quasi pieno in basso */
+    rgba(0,0,0,0.3), 
+    rgba(0,0,0,0.3)
   );
+  background-attachment: fixed; /* lo rende fisso */
   border-radius: 18px;
   padding: 40px 25px;
   text-align: center;
   box-shadow: 0 25px 60px rgba(0,0,0,0.35);
-  color: #000000; /* testo nero per contrasto */
+  color: #ffffff; /* testo bianco */
 }
 
 .card h2 { font-size: 20px; color: #ffffff; }
@@ -168,13 +166,3 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
