--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ body {
 .card {
   display: none;
   background: linear-gradient(
-    rgba(0,0,0,0.3), 
-    rgba(0,0,0,0.3)
+    rgba(150,150,150,0.30) 50%, /* nero semi-trasparente in alto */ 
+    rgba(150,150,150,0.30) 50% /* nero quasi pieno in basso */
   );
   background-attachment: fixed; /* lo rende fisso */
   border-radius: 18px;
@@ -166,3 +166,4 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
