--- a/index.html
+++ b/index.html
@@ -92,15 +92,14 @@ body {
 .card {
   display: none;
   background: linear-gradient(
-    rgba(150,150,150,0.30) 50%, /* nero semi-trasparente in alto */ 
-    rgba(150,150,150,0.30) 50% /* nero quasi pieno in basso */
-  );
-  background-attachment: fixed; /* lo rende fisso */
+    rgba(0,0,0,0.3),
+    rgba(0,0,0,0.3)
+  ); /* rimosso background-attachment: fixed; */
   border-radius: 18px;
   padding: 40px 25px;
   text-align: center;
   box-shadow: 0 25px 60px rgba(0,0,0,0.35);
-  color: #ffffff; /* testo bianco */
+  color: #ffffff;
 }
 
 .card h2 { font-size: 20px; color: #ffffff; }
@@ -166,4 +165,5 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
