--- a/index.html
+++ b/index.html
@@ -102,10 +102,37 @@ body {
   color: #ffffff;
 }
 
-.card h2 { font-size: 20px; cursive; color: #ffffff; }
-.card h1 { font-family: 'Great Vibes', cursive; font-size: 50px; color: #ffffff; margin: 10px 0 20px; }
-.card p { color: #ffffff; font-size: 20px; cursive; line-height: 1.7; margin: 12px 0; }
-.strong { font-weight: 500; cursive; color: #ffffff; }
+.card h2 {
+  font-family: 'Playfair Display', cursive;
+  font-size: 20px;
+  font-style: italic;
+  color: #ffffff;
+}
+
+.card h1 {
+  font-family: 'Great Vibes', cursive;
+  font-size: 50px;
+  font-style: italic;
+  color: #ffffff;
+  margin: 10px 0 20px;
+}
+
+.card p {
+  font-family: 'Playfair Display', cursive;
+  font-size: 20px;
+  font-style: italic;
+  color: #ffffff;
+  line-height: 1.7;
+  margin: 12px 0;
+}
+
+.strong {
+  font-family: 'Playfair Display', cursive;
+  font-weight: 500;
+  font-style: italic;
+  color: #ffffff;
+}
+
 
 /* ANIMAZIONE INVITO */
 .fade { animation: open 1.2s ease forwards; }
@@ -165,6 +192,7 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
 
