--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ body {
 }
 
 .card h2 {
-  font-family: 'Playfair Display', cursive;
+  font-family: 'Great Vibes', cursive;
   font-size: 20px;
   font-style: italic;
   color: #ffffff;
@@ -118,7 +118,7 @@ body {
 }
 
 .card p {
-  font-family: 'Playfair Display', cursive;
+  font-family: 'Great Vibes', cursive;
   font-size: 20px;
   font-style: italic;
   color: #ffffff;
@@ -127,7 +127,7 @@ body {
 }
 
 .strong {
-  font-family: 'Playfair Display', cursive;
+  font-family: 'Great Vibes', cursive;
   font-weight: 500;
   font-style: italic;
   color: #ffffff;
@@ -192,6 +192,7 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
 
