--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ body {
 }
 
 .card h2 {
-  font-family: 'Great Vibes',
+  font-family: 'Great Vibes', cursive;
   font-size: 20px;
-  font-style: italic;
+  font-style: normal;
   color: #ffffff;
 }
 
@@ -118,18 +118,18 @@ body {
 }
 
 .card p {
-  font-family: 'Great Vibes',
+  font-family: 'Great Vibes', cursive;
   font-size: 20px;
-  font-style: italic;
+  font-style: normal;
   color: #ffffff;
   line-height: 1.7;
   margin: 12px 0;
 }
 
 .strong {
-  font-family: 'Great Vibes',
+  font-family: 'Great Vibes', cursive;
   font-weight: 500;
-  font-style: italic;
+  font-style: normal;
   color: #ffffff;
 }
 
@@ -192,6 +192,7 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
 
