--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@ body {
   font-style: normal;
   color: #ffffff;
 }
+  
+/* IMMAGINE INVITO CANVA */
+.invito-img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 14px;
+}
 
 
 /* ANIMAZIONE INVITO */
@@ -161,23 +169,8 @@ body {
 
   <!-- INVITO -->
   <div class="card" id="card">
-    <h2>Siamo felici di invitarvi al</h2>
-    <h1>Battesimo di Denise Lila</h1>
-    <p class="strong">il 12.04.2026</p>
-    <p>
-      presso la <strong>Chiesa Maria Assunta di Villa Lagarina</strong><br>
-      alle ore <strong>11:30</strong>
-    </p>
-    <p>
-      La cerimonia proseguirà<br>
-      con un rinfresco presso<br>
-      <strong>il Parco Guerrieri Gonzaga</strong>
-    </p>
-    <p style="margin-top:25px;font-style:italic;">
-      Chiediamo gentilmente conferma di partecipazione<br>
-      entro il <strong>01.03.2026</strong>
-    </p>
-  </div>
+  <img src="images/invito.png" alt="Invito Battesimo Denise Lila" class="invito-img">
+</div>
 
 </div>
 
@@ -192,6 +185,7 @@ document.getElementById("seal").onclick = function () {
 
 </body>
 </html>
+
 
 
 
